--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,3 +2,17 @@ spring:
   config:
     activate:
       on-profile: prod
+
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: ${DB_URL}
+    username: su
+    password: ${DB_PASSWORD}
+  jpa:
+    open-in-view: false
+    properties:
+      hibernate:
+        format_sql: true
+        query.in_clause_parameter_padding: true
+    hibernate:
+      ddl-auto: update
