chore: change prod env (#16)
* chore: add origin

* chore: add mysql env

* chore: change workflows for cd

checking cd file

* chore: add secrets env

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,7 @@ name: cd
 on:
   push:
     branches:
+      - "develop*"
       - "main"
 
 jobs:
@@ -45,6 +46,7 @@ jobs:
       - name: Execute Gradle build
         run: |
           export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-          
+          export DB_URL=${{ secrets.DB_URL}}
+          export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
           ./gradlew jib
 
