--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,16 +3,17 @@ spring:
     activate:
       on-profile: prod
 
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: ${DB_URL}
-    username: su
-    password: ${DB_PASSWORD}
   jpa:
     open-in-view: false
+    hibernate:
+      ddl-auto: update
+
     properties:
       hibernate:
         format_sql: true
         query.in_clause_parameter_padding: true
-    hibernate:
-      ddl-auto: update
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL}
+    username: su
+    password: ${DB_PASSWORD}
