--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -22,6 +22,7 @@ security:
   patterns:
     ignoring:
       ALL:
+        - /
         - /static/**
         - /h2-console/**
         - /api/**/auth/**
@@ -29,6 +30,7 @@ security:
     permit-all:
       ALL:
         - /
+        - /docs/**
       GET: [ ]
       POST: [ ]
 
@@ -39,3 +41,5 @@ cors:
     origin:
       - http://localhost:3000
       - http://localhost:8080
+      - http://kimyo.ga
+      - http://34.125.126.248
