--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     hibernate:
       ddl-auto: create
 
+    properties:
+      hibernate:
+        format_sql: true
+        query.in_clause_parameter_padding: true
+
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb;MODE=MYSQL
