--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Execute Gradle build
         run: |
+          export SERVER_NAME=${{ secrets.SERVER_NAME }}
           export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
           export DB_URL=${{ secrets.DB_URL}}
           export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
