--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - "develop*"
       - "main*"
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,8 +14,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
-          
+          submodules: true
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
