chore: copy secrets from submodule

--- a/build.gradle
+++ b/build.gradle
@@ -110,7 +110,13 @@ jib {
         jvmFlags = ['-Xms512m', '-Dspring.profiles.active=${PROFILE}']
     }
 }
-
+task copyPrivate(type: Copy) {
+    copy {
+        from './gagebu-submodule'
+        include "application-security.yml"
+        into 'src/main/resources'
+    }
+}
 gradle.taskGraph.beforeTask { Task task ->
     println "executing $task ... *** start ***"
 }
