--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,3 +1,16 @@
 spring:
   profiles:
-    active: test
+    include: security
+
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: create
+  h2:
+    console:
+      enabled: true
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb;MODE=MYSQL
+    username: su
