--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,11 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          submodules: true
+          token: ${{ secrets.SUBMODULE_GITHUB_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -46,7 +50,6 @@ jobs:
       - name: Execute Gradle build
         run: |
           export SERVER_NAME=${{ secrets.SERVER_NAME }}
-          export JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
           export DB_URL=${{ secrets.DB_URL}}
           export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
           ./gradlew jib
