--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,17 +5,20 @@ on:
     branches:
       - "develop*"
       - "main*"
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
-          
+          submodules: true
+          token: ${{ secrets.SUBMODULE_GITHUB_TOKEN }}
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -34,5 +37,4 @@ jobs:
 
       - name: Execute Gradle build
         run: ./gradlew test
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
