--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   mysql:
     image: mysql:5.7
-    container_name: mysql
+    container_name: mysql-gagebu
     ports:
       - "3306:3306"
     environment:
@@ -22,8 +22,7 @@ services:
       - "80:8080"
     environment:
       PROFILE: prod
-      JWT_SECRET_KEY: 6rmA7IiY67mI7J2Y6rCA6rOE67aA7ZSE66Gc6re4656o
-      DB_URL: jdbc:mysql://mysql:3306/gagebu
+      DB_URL: jdbc:mysql://mysql-gagebu:3306/gagebu
       DB_PASSWORD: gagebu
     restart: always
     depends_on:
