chore: add mail dependency

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     // web & security
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    
     // validation
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
